2009-05-13  Nate Chapin  <japhet@google.com>

Reviewed by Dimitri Glazkov.

        Fix LayoutTests/fast/dom/Element/attr-param-typechecking.html crashing with V8.
        https://bugs.webkit.org/show_bug.cgi?id=25758

        * bindings/v8/custom/V8ElementCustom.cpp:
        (WebCore::CALLBACK_FUNC_DECL): return the result of throwError() if it is called.

Canonical link: https://commits.webkit.org/35614@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43665 268f45cc-cd09-0410-ab3c-d52691b4dbfc